Criando o model de serviços pt1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=e-diaristas
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ediaristas?useTimezone=true&serverTimezone=America/Fortaleza
+spring.datasource.username=jotahdev
+spring.datasource.password=2527
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
