--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ediaristas?useTimezone=true&se
 spring.datasource.username=jotahdev
 spring.datasource.password=2527
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
